<resources>
    <string name="app_name">ToDaily</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_done">Done</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="activity_add_tvTaskName">What is the task?</string>
    <string name="activity_add_etTaskNameHint">Task Name</string>
    <string name="activity_add_tvTaskDue">When is the task due?</string>
    <string name="activity_add_etTaskDueHint">Due Date</string>
    <string name="activity_add_btnTaskDueDateContent">Due Date Calendar</string>
</resources>
